2013-09-28  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/testutils.c (test_hash_large): Added simple progress
	indicator.

	* macros.h (MD_PAD): Use size argument, don't depend on
	sizeof of the count field(s).

2013-09-22  Niels Möller  <nisse@lysator.liu.se>

	* x86_64/gcm-hash8.asm: New file.
	* x86_64/gcm-gf-mul-8.asm: Deleted.

	* configure.ac (asm_nettle_optional_list): Look for gcm-hash8.asm,
	not gcm-gf-mul-8.asm.
	* gcm.c [HAVE_NATIVE_gcm_hash8]: Make use of (optional) assembly
	implementation.

2013-09-21  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (des.po): Add same dependencies as for des.o.
	Reported by Vincent Torri.

2013-09-20  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/gcm-test.c: Added tests with associated data of
	varying size.

	* testsuite/testutils.c (tstring_alloc): Add NUL-termination.

2013-09-18  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in: New stampfiles, libnettle.stamp and
	libhogweed.stamp, updated when both static and shared libraries
	are rebuilt. Used as link dependencies in subdirectories.
	* examples/Makefile.in: Make executable targets depend on
	../libnettle.stamp and libhogweed.stamp, not directly on the
	static library files.
	* testsuite/Makefile.in: Likewise.
	* tools/Makefile.in: Likewise.

2013-09-09  Niels Möller  <nisse@lysator.liu.se>

	* gcm.c [HAVE_NATIVE_gcm_gf_mul_8]: Make use of (optional)
	assembly implementation.

	* configure.ac: Support optional assembly files for both nettle
	and hogweed. Replaced OPT_ASM_SOURCES with OPT_ASM_NETTLE_SOURCES,
	OPT_ASM_HOGWEED_SOURCES, and asm_optional_list with
	asm_nettle_optional_list and asm_hogweed_optional_list.
	(asm_nettle_optional_list): Added gcm-gf-mul-8.asm.

2013-06-25  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/gcm-test.c: Deleted redundant include of aes.h.

	* testsuite/testutils.c (test_aead): Allow digest size smaller
	than the block size.

	* tools/nettle-pbkdf2.c: New command line tool.