@@ -46,7 +46,7 @@ extern "C" {
 struct md5_ctx
 {
   uint32_t state[_MD5_DIGEST_LENGTH];
-  uint32_t count_low, count_high; /* Block count */
+  uint64_t count;               /* Block count */
   uint8_t block[MD5_DATA_SIZE]; /* Block buffer */
   unsigned index;               /* Into buffer */
 };
